Aligned text boxes, fixed dropdown deleting.

--- a/Baseball/style.css
+++ b/Baseball/style.css
@@ -9,13 +9,13 @@
 
 }
 #name {
-    margin-left: 14px;
+    margin-left: 18px;
 }
 #ab {
-    margin-left: 4px;
+    margin-left: 7px;
 }
 #hits {
-    margin-left: 26px;
+    margin-left: 33px;
 }
 td {
     border-right: 3px solid black;
